# monad

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODEOWNERS  README.md
category/event/: CMakeLists.txt  Config.cmake.in  package-description.txt
category/event/example/: event-hist-recovery.c  eventwatch.c  shim-backtrace.c
category/event/os-compat/: fcntl.h  memfd_create.c  posix_fallocate.c  stdbit-builtin.h  stdbit.h  string.h
category/event/os-compat/sys/: mman.h
category/event/tools/: .clang-format
category/event/tools/blockcapd/: CMakeLists.txt  blockcapd.hpp  capture_blocks.cpp  driver.cpp  metrics.cpp
category/event/tools/event-cli/: CMakeLists.txt  blockstat.cpp  command.hpp  digest.cpp  driver.cpp  dump.cpp  err_cxx.hpp  eventsource.cpp  evm_opcodes.hpp  execstat.cpp  file.cpp  file.hpp  headstat.cpp  info.cpp  init.cpp  init.hpp  iterator.cpp  iterator.hpp  main.cpp  metadata.hpp  options.hpp  parse.cpp  parse.hpp  record.cpp  recordexec.cpp  recordtrace.cpp  recordtrace.hpp  recordtrace_drain.cpp  recordtrace_sync.cpp  run.cpp  sectiondump.cpp  snapshot.cpp  stacktrace.cpp  stats.cpp  stats.hpp  stream.cpp  stream.hpp  util.cpp  util.hpp  vmstat.cpp
category/event/tools/prometheus-relay/: prometheus-relay.py
category/vm/event/: CMakeLists.txt  evm_ctypes_fmt.hpp  evmt_event_ctypes.h  evmt_event_ctypes_fmt.hpp  evmt_event_ctypes_metadata.c  evmt_event_recorder.cpp  evmt_event_recorder.hpp
category/vm/llvm/: CMakeLists.txt  dependency_blocks.hpp  emitter.hpp  execute.cpp  execute.hpp  llvm.cpp  llvm.hpp  llvm_state.hpp  spilldependencies.txt
cmd/: CMakeLists.txt  eventcap.cpp  monad.cpp  monad_cli.cpp
cmd/eventcap/: CMakeLists.txt  blockstat.cpp  digest.cpp  dump.cpp  err_cxx.hpp  eventcap.hpp  eventsource.cpp  eventsource.hpp  execstat.cpp  file.cpp  file.hpp  header.cpp  headstat.cpp  info.cpp  init.cpp  init.hpp  iterator.cpp  iterator.hpp  main.cpp  metadata.hpp  options.hpp  parse.cpp  parse.hpp  record.cpp  recordexec.cpp  recordtrace.cpp  recordtrace.hpp  recordtrace_drain.cpp  recordtrace_sync.cpp  sectiondump.cpp  snapshot.cpp  stacktrace.cpp  util.cpp  util.hpp
cmd/monad/: event.cpp  event.hpp  event_cvt.cpp  event_cvt.hpp  main.cpp  runloop_ethereum.cpp  runloop_ethereum.hpp  runloop_monad.cpp  runloop_monad.hpp  runloop_monad_ethblocks.cpp  runloop_monad_ethblocks.hpp  wal.cpp  wal.hpp
cmd/monad_edit_trace/: analysis.cpp  analysis.hpp  err_cxx.hpp  extract_block.cpp  main.cpp  merge.cpp  options.hpp  print.cpp  print.hpp  print_compat.hpp  show.cpp  strip.cpp  trace_file_reader.cpp  trace_file_reader.hpp  trace_file_writer.cpp  trace_file_writer.hpp
cmd/replay2/: CMakeLists.txt  driver.c  init_trie_db.c  options.h  replay.c
cmd/vm/mce/: CMakeLists.txt  mce.cpp
cmd/vm/mce/src/: instrumentable_compiler.hpp  instrumentable_vm.hpp
cmd/vm/parser/: parser_tool.cpp
libs/core/: CMakeLists.txt
libs/core/src/monad-c/rlp/: rlp_decode.c  rlp_decode.h
libs/core/src/monad-c/support/: assert.c  assert.h  bit.h  mapped_file.c  mapped_file.h  parse_util.c  parse_util.h  perf_counter.h  range.h  result.c  result.h  thread.c  thread.h
libs/core/src/monad/core/: c_result.cpp  c_result.h  spinlock.h  spinlock_disas.c  spinloop.h  srcloc.h  srcloc.hpp  thread-darwin.c  thread-linux.c  thread.h
libs/core/src/monad/event/: event_recorder.c  event_recorder.h  event_recorder.md  event_recorder_inline.h  event_server.c  event_server.h  event_session.c  event_session.h  event_shared.c  event_shared.h
libs/core/src/monad/fiber/: fiber-api.md  fiber.c  fiber.h  fiber_channel.h  fiber_inline.h  fiber_semaphore.h  fiber_thr.c  fiber_trace.h  priority_pool.cpp  priority_pool.hpp  priority_task.hpp  run_queue.c  run_queue.h
libs/core/src/monad/mem/: align.h
libs/core/src/monad/mem/cma/: cma_alloc.c  cma_alloc.h  cma_bump_alloc.c  cma_bump_alloc.h  cma_fallback.c  cma_fallback.h
libs/core/src/monad/trace/: trace.c  trace.h  trace.hpp  trace_file.c  trace_file.h
libs/core/test/: CMakeLists.txt  cma_allocators.cpp  event_recorder.cpp  fiber-hello.c  fiber.cpp  fiber_bench.c  fiber_bench.cpp  fiber_semaphore.cpp  run_queue_test.cpp  spinlock.cpp
libs/ethereum/: CMakeLists.txt
libs/ethereum/src/monad-c/db/: block_db.c  block_db.h
libs/ethereum/src/monad-c/ethereum/: block.c  block.h  rlp_decode_eth_types.h  transaction.c  transaction.h  types.h
libs/event/: CMakeLists.txt
libs/event/src/monad/event/: event.h  event.md  event_consumer.c  event_consumer.h  event_consumer_inline.h  event_metadata.c  event_metadata.h  event_protocol.h  event_shmem.h
libs/event/src/monad/event/definitions/: block.def  fiber.def  internal.def  perf.def  stats.def  txn.def
libs/runloop/src/monad/fiber/test/: CMakeLists.txt  channel.cpp  fiber-hello.cpp  fiber_bench.cpp  run_queue.cpp
rust/: Cargo.toml
rust/crates/monad-build/: Cargo.toml
rust/crates/monad-build/src/: cmake.rs  lib.rs
rust/crates/monad-cxx/: Cargo.toml  build.rs
rust/crates/monad-cxx/src/: lib.rs
rust/crates/monad-ethcall/: Cargo.toml  build.rs
rust/crates/monad-ethcall/src/: ffi.rs  lib.rs
rust/crates/monad-event-ring/: Cargo.toml  build.rs
rust/crates/monad-event-ring/benches/: snapshot_raw.rs
rust/crates/monad-event-ring/src/: ffi.rs  lib.rs
rust/crates/monad-event-ring/src/descriptor/: mod.rs
rust/crates/monad-event-ring/src/ring/: snapshot.rs
rust/crates/monad-exec-events/: Cargo.toml  build.rs
rust/crates/monad-exec-events/benches/: snapshot_exec.rs
rust/crates/monad-exec-events/examples/: event_cvt_cli.rs  explorer.rs
rust/crates/monad-exec-events/src/: block.rs  ffi.rs  lib.rs  reader.rs
rust/crates/monad-exec-events/src/events/: mod.rs
rust/crates/monad-statesync/: Cargo.toml  build.rs
rust/crates/monad-triedb/: Cargo.toml  README.md  build.rs
rust/crates/monad-triedb/include/: ffi.h
rust/crates/monad-triedb/src/: ffi.cpp  ffi.rs  lib.rs
rust/crates/monad-triedb/triedb-driver/: CMakeLists.txt
rust/crates/monad-triedb/triedb-driver/include/: triedb.h
rust/crates/monad-triedb/triedb-driver/src/: triedb.cpp
(+723 files in other folders)
