[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
debug = true
lto = "thin"
panic = "abort"

[workspace.metadata.cargo-shear]
ignored = [
    "monad-cxx",
    "monad-exec-events",
]

[workspace.dependencies]
monad-cxx = { path = "./crates/monad-cxx" }
monad-event-ring = { path = "./crates/monad-event-ring" }
monad-exec-events = { path = "./crates/monad-exec-events" }

alloy-consensus = "1.7"
alloy-eips = "1.7"
alloy-primitives = "1.5"
alloy-rpc-types = "1.7"
bindgen = "0.71.1"
cc = "1.2.27"
chrono = "0.4.34"
clap = "4.2"
cmake = "0.1"
criterion = { version = "0.8", features = ["html_reports"] }
hex = "0.4"
itertools = "0.10"
libc = "0.2.153"
ratatui = "0.29.0"
serde = "1.0"
serde_json = "1.0"
strum = "0.26.3"
tracing = "0.1"
zstd = "0.13"
